# hydrophonokit

./: .gitignore  .zenodo.json  CHANGES.md  CITATION.cff  CLI_GUIDE.md  DOCUMENTATION.md  FILE_MANAGEMENT.md  FILE_MIGRATION_PLAN.md  INSTALL.md  LICENSE  MANIFEST.in  PLAN_PHASE5_H_STORAGE.md  POSTPROCESSOR_DEV_PLAN.md  README.md  ROADMAP.md  hydrophonokit.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
hydrophonokit/: __init__.py  __main__.py  analyzer.py  anharmonic.py  cli.py  elastic.py  eos.py  generator.py  h2_molecule.py  h_storage.py  hpc_profiles.py  inspector.py  physics.py  postprocessor_legacy.py  qha.py  status.py  templates.py  verifier.py
hydrophonokit/postprocessor/: __init__.py  advanced_plotting.py  bands_dos.py  caching.py  core.py  data_loader.py  debye_waller.py  enhanced_export.py  export.py  group_velocities.py  hydrogen.py  ifc_computer.py  mode_resolved_thermo.py  plotting.py  reporting.py  specialized_plots.py  thermodynamics.py
hydrophonokit/visualization/: __init__.py  band_plots.py  base_plotter.py  comparison_plots.py  dos_plots.py  figure_factory.py  hydrogen_plots.py  ifc_born_plots.py  interactive_plots.py  multi_panel.py  publication_formatter.py  themes.py  thermo_plots.py  transport_plots.py
tests/: __init__.py  test_anharmonic.py  test_elastic.py  test_eos_qha.py  test_h_storage.py  test_postprocessor_caching.py  test_postprocessor_errors.py  test_postprocessor_export.py  test_postprocessor_plotting.py  test_postprocessor_scientific.py  test_visualization_core.py
