[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydro-phonokit"
version = "2.7.0"
description = "Material-aware scientific framework for automated VASP/Phonopy phonon calculations"
readme = "README.md"
license = {text = "All Rights Reserved"}
authors = [
    {name = "Attia A Gadallah", email = "ava7312@psu.edu"},
]
maintainers = [
    {name = "Attia A Gadallah", email = "ava7312@psu.edu"},
]
keywords = [
    "phonon",
    "vasp",
    "phonopy",
    "materials-science",
    "dft",
    "thermodynamics",
    "hydrogen-storage",
    "computational-physics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.8.0",
    "phonopy>=2.20.0",
    "spglib>=2.0.0",
    "pymatgen>=2023.0.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
# Advanced features requiring additional packages
symfc = [
    "symfc>=1.0.0",          # Symmetry-adapted force constants
]
seekpath = [
    "seekpath>=2.0.0",        # High-symmetry k-path generation
]
hpc = [
    # For running on HPC clusters (optional, typically loaded via modules)
    # These are usually not pip-installable but documented here
]
dev = [
    # Development & testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.0.0",
    # Linting & formatting
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    # Type stubs
    "types-setuptools",
    # Documentation
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
all = [
    "hydro-phonokit[symfc,seekpath,dev]",
]

[project.urls]
Homepage = "https://github.com/hydrophonokit/hydrophonokit"
Documentation = "https://hydrophonokit.readthedocs.io"
Repository = "https://github.com/hydrophonokit/hydrophonokit"
"Bug Tracker" = "https://github.com/hydrophonokit/hydrophonokit/issues"
Changelog = "https://github.com/hydrophonokit/hydrophonokit/blob/main/CHANGES.md"

[project.scripts]
hydrophonokit = "hydrophonokit.cli:main"

[tool.setuptools.packages.find]
include = ["hydrophonokit*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
hydrophonokit = ["*.md", "*.txt"]

# ============================================================================
# Tool Configurations
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--cov=hydrophonokit",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require VASP data)",
    "unit: marks tests as unit tests",
]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["hydrophonokit", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line length (handled by formatter)
    "B028",   # no explicit stacklevel
]

[tool.ruff.lint.isort]
known-first-party = ["hydrophonokit"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "phonopy.*",
    "spglib.*",
    "pymatgen.*",
    "seekpath.*",
    "symfc.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
  | __pycache__
)/
'''

[tool.coverage.run]
source = ["hydrophonokit"]
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]
show_missing = true
fail_under = 70
